--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                 Offices
               </h5>
               <p>
-                Bengalore, Gurugram , Pune.
+                Readable content of a page when looking at its layoutreadable content of a page when looking at its layout
               </p>
             </div>
 
