--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           </div>
           <div class="detail-box">
             <h5>
-              SEO Markting
+              Backend Devlopment
             </h5>
           </div>
         </div>
