--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         <div class="col-lg-9 col-md-10 mx-auto">
           <div class="heading_container">
             <h2>
-              Testimonial
+              Achievements
             </h2>
           </div>
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
